# geo_playground

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
docs/: architecture.md  runbook.md  testing.md
scripts/: smoke_e2e.sh  smoke_openclaw.sh  test_openclaw_isolation.sh
services/agent/: .env.example  Dockerfile  langgraph.json  pyproject.toml
services/agent/geoint_agent/: __init__.py  app.py  config.py  tools.py
services/agent/geoint_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/agent/tests/: test_agent.py
services/analysis-worker/: Dockerfile  pyproject.toml
services/analysis-worker/geoint_analysis_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/analysis-worker/geoint_worker/: __init__.py  app.py
services/analysis-worker/tests/: test_worker.py
services/exec-broker/: Dockerfile  package.json  server.mjs
services/openclaw-gateway/: Dockerfile
services/openclaw-gateway/bootstrap/: AGENTS.md  openclaw.json  start-openclaw.sh
services/openclaw-runtime/: Dockerfile
services/search-proxy/: Dockerfile  package.json  server.mjs
services/telemetry-gateway/: Dockerfile  package.json
services/telemetry-gateway/src/: cache.mjs  copilot-context.mjs  db.mjs  providers.mjs  schema.mjs  server.mjs  store.mjs
services/telemetry-gateway/test/: copilot-context.test.mjs  schema.test.mjs
services/ui/: index.html  server.mjs
