[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoint-agent"
version = "0.1.0"
description = "Deep Agents GEOINT backend for LangGraph Agent Server"
requires-python = ">=3.12"
dependencies = [
  "deepagents>=0.0.28",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.4",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]

[tool.setuptools]
packages = ["geoint_agent"]
